update deployment setup, add flyway for schema changes. fix profile/prop-conditional loading